--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </div>
                 <div class="contact-form">
                     <h3>Gửi tin nhắn</h3>
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://formspree.io/f/xnnbprll" method="POST">
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Họ và tên" required>
                         </div>
@@ -354,8 +354,14 @@
                         <div class="form-group">
                             <textarea id="message" name="message" placeholder="Nội dung tin nhắn" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Gửi tin nhắn</button>
+                        <button type="submit" class="btn btn-primary">
+                            <span class="btn-text">Gửi tin nhắn</span>
+                            <span class="btn-loading" style="display: none;">
+                                <i class="fas fa-spinner fa-spin"></i> Đang gửi...
+                            </span>
+                        </button>
                     </form>
+                    <div class="form-status" id="formStatus" style="display: none;"></div>
                 </div>
             </div>
         </div>
