Change some info

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <span class="typing-cursor">|</span>
                 </h1>
                 <p class="hero-subtitle fade-in-up stagger-1" data-lang-key="hero-subtitle">
-                    Frontend Developer & Digital Communication Engineer
+                    Frontend Developer & Multimedia Engineer
                 </p>
                 <p class="hero-description fade-in-up stagger-2" data-lang-key="hero-description">
                     Sinh viên năm 4 tại HUST, đam mê phát triển web và sáng tạo giao diện người dùng. 
