Change some info 2

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="profile-info">
                         <h3 data-lang-key="name">Bùi Văn Bình</h3>
-                        <p data-lang-key="hero-subtitle">Frontend Developer</p>
+                        <p data-lang-key="profile-subtitle">Frontend Developer</p>
                         <div class="social-links">
                             <a href="https://github.com/Chu-vit-Huster-ngao-ngo-2k4" target="_blank">
                                 <i class="fab fa-github"></i>
